# selfish_gene_hpc

./: .gitignore  CMakeLists.txt  README.md  results.csv
.cache/clangd/index/: gene_sim.cu.211CCFB7ED78C66C.idx  gene_sim.hpp.DCF7E6F6EFE87629.idx  gol.hpp.7C0978906DB4805A.idx  gol_gpu.cu.C57D6CB767C1012A.idx  main.cpp.1A9C6E8D8E209A3C.idx  main.cpp.27AFFF6FBE500D07.idx  rng.cuh.8E6CFCD300A6C229.idx  rng.cuh.BBEBFD6E8453A330.idx
scripts/: benchmark.py  make_video.sh  plot_results.py  stitch_video.py
src/: gene_sim.cu  gene_sim.hpp  main.cpp  rng.cuh
